@@ -1,5 +1,13 @@
 2007-02-19  Thomas Schwinge  <tschwinge@gnu.org>
 
+	* Makefile.am (gnumach_LINKFLAGS): New variable.
+	(gnumach_LINK): Use that one instead of the previously used
+	`LINKFLAGS_gnumach'.
+	* i386/Makefrag.am (LINKFLAGS_gnumach): Rename to `gnumach_LINKFLAGS',
+	move into [PLATFORM_at] and pass `_START'.
+	* i386/ldscript: Don't hardcode a _start address of 0x100000, but make
+	it configurable via `_START'.
+
 	Add a `--enable-platform' option for future use.  Allow building
 	without any Linux code.
 	* Makefile.am: Don't include `linux/Makefrag.am' in there...
